fix del loop singola traccia